# Hackathon--2-phase-1

./: README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/constitution/: 1-constitution-update-request.constitution.prompt.md
history/prompts/todo-app/: 1-specification-creation.spec.prompt.md  2-implementation-plan.plan.prompt.md  3-task-breakdown.tasks.prompt.md  4-implementation-complete.tasks.prompt.md
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
specs/001-todo-app/contracts/: cli-contracts.md
src/cli/: todo_cli.py
src/models/: todo_item.py
src/services/: todo_service.py
src/todo_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
todo_app.egg-info/: SOURCES.txt  entry_points.txt
